--- a/package.json
+++ b/package.json
@@ -1,46 +1,54 @@
 {
-  "name": "promptfoo",
-  "description": "LLM eval & testing toolkit",
-  "author": "Ian Webster",
+  "name": "promptfoo-storybook",
   "version": "0.118.11",
-  "license": "MIT",
-  "type": "commonjs",
+  "description": "LLM eval & testing toolkit",
+  "homepage": "https://github.com/promptfoo/promptfoo#readme",
+  "bugs": {
+    "url": "https://github.com/promptfoo/promptfoo/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/promptfoo/promptfoo.git"
   },
-  "main": "dist/src/index.js",
+  "license": "MIT",
+  "author": "Ian Webster",
+  "type": "commonjs",
   "exports": {
     ".": {
       "import": "./dist/src/index.js",
       "require": "./dist/src/index.js"
     }
   },
-  "workspaces": [
-    "src/app",
-    "site"
-  ],
+  "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
-  "typings": "dist/src/index.d.ts",
+  "bin": {
+    "promptfoo": "dist/src/main.js",
+    "pf": "dist/src/main.js"
+  },
+  "directories": {
+    "example": "examples",
+    "test": "test"
+  },
   "files": [
     "dist",
     "!dist/test",
     "!dist/src/__mocks__"
   ],
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "bin": {
-    "promptfoo": "dist/src/main.js",
-    "pf": "dist/src/main.js"
-  },
+  "workspaces": [
+    "src/app",
+    "site",
+    "packages/toolkit",
+    "packages/storybook"
+  ],
   "scripts": {
     "audit:fix": "npm audit fix && npm audit fix --prefix src/app && npm audit fix --prefix site",
     "bin": "dist/src/main.js",
     "build:app": "npm run build --prefix src/app",
+    "build:toolkit": "npm run build --prefix packages/toolkit",
+    "build:storybook": "npm run build:toolkit && npm run build --prefix packages/storybook",
     "build:clean": "shx rm -rf dist",
     "build:watch": "tsc --watch",
-    "build": "npm run generate-constants && tsc && shx cp src/*.html dist/src && shx cp src/python/wrapper.py dist/src/python && shx mkdir -p dist/src/golang && shx cp src/golang/wrapper.go dist/src/golang && shx cp src/dynamic-import.cjs dist/src && shx rm -rf dist/drizzle && shx cp -r drizzle dist/drizzle && npm run build:app && shx chmod +x dist/src/main.js",
+    "build": "npm run generate-constants && tsc && shx cp src/*.html dist/src && shx cp src/python/wrapper.py dist/src/python && shx mkdir -p dist/src/golang && shx cp src/golang/wrapper.go dist/src/golang && shx cp src/dynamic-import.cjs dist/src && shx rm -rf dist/drizzle && shx cp -r drizzle dist/drizzle && npm run build:toolkit && npm run build:app && shx chmod +x dist/src/main.js",
     "citation:generate": "ts-node scripts/generateCitation.ts",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "node --require tsx/cjs src/migrate.ts",
@@ -48,6 +56,9 @@
     "dev:app": "npm run dev --prefix src/app",
     "dev:server": "nodemon -P 1000 src/server/index.ts",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:app\"",
+    "dev:toolkit": "npm run dev --prefix packages/toolkit",
+    "dev:storybook-site": "npm run storybook --prefix packages/storybook",
+    "dev:storybook": "concurrently \"npm run dev:toolkit\" \"npm run dev:storybook-site\"",
     "f": "git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E '\\.(js|jsx|mjs|cjs|ts|tsx|json)$' | xargs npx @biomejs/biome format --write && git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E '\\.(css|scss|html|md|mdc|mdx|yaml|yml)$' | xargs prettier --write",
     "format:check": "npx @biomejs/biome format && prettier --check '**/*.{css,scss,html,md,mdc,mdx,yaml,yml}'",
     "format": "npx @biomejs/biome format --write . && prettier --write '**/*.{css,scss,html,md,mdc,mdx,yaml,yml}'",
@@ -57,14 +68,17 @@
     "l": "git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E '\\.(js|ts|tsx)$' | xargs npx @biomejs/biome lint --write",
     "lint:site": "npx @biomejs/biome lint site",
     "lint:src": "npx @biomejs/biome lint src",
+    "lint:toolkit": "npx @biomejs/biome lint packages/toolkit",
+    "lint:storybook": "npx @biomejs/biome lint packages/storybook",
     "lint:tests": "npx @biomejs/biome lint test",
-    "lint": "npm run lint:src",
+    "lint": "npm run lint:src && npm run lint:toolkit && npm run lint:storybook",
     "local:web": "npm run dev --prefix src/app",
     "local": "ts-node --cwdMode --transpileOnly src/main.ts",
     "preversion": "command -v gh >/dev/null 2>&1 || (echo \"Error: GitHub CLI required.\" && exit 1) && [ \"$(git rev-parse --abbrev-ref HEAD)\" = \"main\" ] || (echo \"Error: Must be on main branch to version\" && exit 1) && git pull origin main && git checkout -b \"chore/bump-version-$(date +%s)\"",
     "postversion": "npm run citation:generate && git add CITATION.cff && git commit --amend --no-edit && gh pr create --repo promptfoo/promptfoo --title \"chore: bump version $npm_package_version\" --body \"\"",
     "prepublishOnly": "node -e \"if (!process.env.PROMPTFOO_POSTHOG_KEY) { console.error('Error: PROMPTFOO_POSTHOG_KEY must be set'); process.exit(1); }\" && npm run build:clean && npm run build",
     "test:app": "npm run test --prefix src/app",
+    "test:toolkit": "npm run test --prefix packages/toolkit",
     "test:integration": "jest --config jest.integration.config.ts integration",
     "test:watch": "jest --watch",
     "test:redteam:integration": "npm run build && ./test/redteam/integration/test.sh",
@@ -73,52 +87,70 @@
     "mcp": "node dist/src/main.js mcp",
     "depcheck": "depcheck --ignores=\"@types/*,@biomejs/biome,prettier,shx,concurrently,madge,knip,vite,typescript,tshy\" --ignore-dirs=\"dist,site,examples,node_modules\""
   },
-  "overrides": {
-    "uri-js": "npm:uri-js-replace",
+  "dependencies": {
+    "@anthropic-ai/sdk": "^0.65.0",
+    "@apidevtools/json-schema-ref-parser": "^12.0.2",
+    "@googleapis/sheets": "^9.8.0",
+    "@inquirer/checkbox": "^4.2.4",
+    "@inquirer/confirm": "^5.1.18",
+    "@inquirer/core": "^10.2.2",
+    "@inquirer/editor": "^4.2.20",
+    "@inquirer/input": "^4.2.4",
+    "@inquirer/select": "^4.3.4",
+    "@modelcontextprotocol/sdk": "^1.18.1",
+    "@types/ws": "^8.18.1",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "async": "^3.2.6",
+    "better-sqlite3": "11.10.0",
+    "cache-manager": "^4.1.0",
+    "cache-manager-fs-hash": "^3.0.0",
+    "chalk": "^4.1.2",
     "chokidar": "4.0.3",
-    "whatwg-url": "14.2.0",
-    "esbuild": "0.25.9",
-    "react-is": "^18.3.1",
-    "*": {
-      "whatwg-url": "14.2.0",
-      "chokidar": "4.0.3",
-      "esbuild": "0.25.9"
-    }
-  },
-  "peerDependencies": {
-    "@adaline/anthropic": "1.6.0",
-    "@adaline/azure": "1.5.0",
-    "@adaline/gateway": "1.8.0",
-    "@adaline/google": "1.7.0",
-    "@adaline/groq": "1.7.0",
-    "@adaline/open-router": "1.4.0",
-    "@adaline/openai": "1.8.0",
-    "@adaline/provider": "1.4.0",
-    "@adaline/together-ai": "1.4.0",
-    "@adaline/types": "1.8.0",
-    "@adaline/vertex": "1.5.0",
-    "@aws-sdk/client-bedrock-agent-runtime": "^3.879.0",
-    "@aws-sdk/client-bedrock-runtime": "^3.879.0",
-    "@aws-sdk/client-sagemaker-runtime": "^3.879.0",
-    "@aws-sdk/credential-provider-sso": "^3.879.0",
-    "@azure/identity": "^4.11.2",
-    "@azure/openai-assistants": "^1.0.0-beta.6",
-    "@fal-ai/client": "^1.6.2",
-    "@ibm-cloud/watsonx-ai": "^1.6.12",
-    "@ibm-generative-ai/node-sdk": "^3.2.4",
-    "@playwright/browser-chromium": "^1.55.0",
-    "@smithy/node-http-handler": "^4.1.1",
-    "fluent-ffmpeg": "^2.1.3",
-    "google-auth-library": "^10.3.0",
-    "ibm-cloud-sdk-core": "^5.4.2",
-    "langfuse": "^3.38.5",
-    "natural": "^8.1.0",
-    "node-sql-parser": "^5.3.12",
-    "pdf-parse": "^1.1.1",
-    "playwright": "^1.55.0",
-    "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "sharp": "^0.34.4"
+    "cli-progress": "^3.12.0",
+    "cli-table3": "^0.6.5",
+    "commander": "^14.0.1",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
+    "csv-stringify": "^6.6.0",
+    "debounce": "^2.2.0",
+    "dedent": "^1.7.0",
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
+    "express": "^5.1.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-safe-stringify": "^2.1.1",
+    "fast-xml-parser": "^5.2.5",
+    "fastest-levenshtein": "^1.0.16",
+    "glob": "^11.0.3",
+    "http-z": "^7.1.3",
+    "jks-js": "^1.1.4",
+    "js-rouge": "^3.0.0",
+    "js-yaml": "^4.1.0",
+    "jsdom": "^26.1.0",
+    "lru-cache": "^11.2.1",
+    "mathjs": "^14.7.0",
+    "node-cache": "^5.1.2",
+    "nunjucks": "^3.2.4",
+    "openai": "^6.0.0",
+    "opener": "^1.5.2",
+    "pem": "^1.15.1",
+    "posthog-node": "^5.8.4",
+    "proxy-agent": "^6.5.0",
+    "proxy-from-env": "^1.1.0",
+    "python-shell": "^5.0.0",
+    "rfdc": "^1.4.1",
+    "rxjs": "^7.8.2",
+    "semver": "^7.7.2",
+    "socket.io": "^4.8.1",
+    "tsx": "^4.20.5",
+    "undici": "^7.16.0",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "ws": "^8.18.3",
+    "zod": "^3.25.76",
+    "zod-validation-error": "^3.5.3"
   },
   "devDependencies": {
     "@adaline/anthropic": "1.7.1",
@@ -197,6 +229,41 @@
     "winston-transport": "^4.9.0",
     "zod-to-json-schema": "^3.24.6"
   },
+  "peerDependencies": {
+    "@adaline/anthropic": "1.6.0",
+    "@adaline/azure": "1.5.0",
+    "@adaline/gateway": "1.8.0",
+    "@adaline/google": "1.7.0",
+    "@adaline/groq": "1.7.0",
+    "@adaline/open-router": "1.4.0",
+    "@adaline/openai": "1.8.0",
+    "@adaline/provider": "1.4.0",
+    "@adaline/together-ai": "1.4.0",
+    "@adaline/types": "1.8.0",
+    "@adaline/vertex": "1.5.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.879.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.879.0",
+    "@aws-sdk/client-sagemaker-runtime": "^3.879.0",
+    "@aws-sdk/credential-provider-sso": "^3.879.0",
+    "@azure/identity": "^4.11.2",
+    "@azure/openai-assistants": "^1.0.0-beta.6",
+    "@fal-ai/client": "^1.6.2",
+    "@ibm-cloud/watsonx-ai": "^1.6.12",
+    "@ibm-generative-ai/node-sdk": "^3.2.4",
+    "@playwright/browser-chromium": "^1.55.0",
+    "@smithy/node-http-handler": "^4.1.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "google-auth-library": "^10.3.0",
+    "ibm-cloud-sdk-core": "^5.4.2",
+    "langfuse": "^3.38.5",
+    "natural": "^8.1.0",
+    "node-sql-parser": "^5.3.12",
+    "pdf-parse": "^1.1.1",
+    "playwright": "^1.55.0",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "sharp": "^0.34.4"
+  },
   "optionalDependencies": {
     "@biomejs/cli-darwin-arm64": "2.2.4",
     "@biomejs/cli-darwin-x64": "2.2.4",
@@ -211,71 +278,22 @@
     "@swc/core-linux-x64-musl": "^1.13.5",
     "@swc/core-win32-x64-msvc": "^1.13.5"
   },
-  "dependencies": {
-    "@anthropic-ai/sdk": "^0.65.0",
-    "@apidevtools/json-schema-ref-parser": "^12.0.2",
-    "@googleapis/sheets": "^9.8.0",
-    "@inquirer/checkbox": "^4.2.4",
-    "@inquirer/confirm": "^5.1.18",
-    "@inquirer/core": "^10.2.2",
-    "@inquirer/editor": "^4.2.20",
-    "@inquirer/input": "^4.2.4",
-    "@inquirer/select": "^4.3.4",
-    "@modelcontextprotocol/sdk": "^1.18.1",
-    "@types/ws": "^8.18.1",
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
-    "async": "^3.2.6",
-    "better-sqlite3": "11.10.0",
-    "cache-manager": "^4.1.0",
-    "cache-manager-fs-hash": "^3.0.0",
-    "chalk": "^4.1.2",
-    "chokidar": "4.0.3",
-    "cli-progress": "^3.12.0",
-    "cli-table3": "^0.6.5",
-    "commander": "^14.0.1",
-    "compression": "^1.8.1",
-    "cors": "^2.8.5",
-    "csv-parse": "^6.1.0",
-    "csv-stringify": "^6.6.0",
-    "debounce": "^2.2.0",
-    "dedent": "^1.7.0",
-    "dotenv": "^17.2.2",
-    "drizzle-orm": "^0.44.5",
-    "express": "^5.1.0",
-    "fast-deep-equal": "^3.1.3",
-    "fast-safe-stringify": "^2.1.1",
-    "fast-xml-parser": "^5.2.5",
-    "fastest-levenshtein": "^1.0.16",
-    "glob": "^11.0.3",
-    "http-z": "^7.1.3",
-    "jks-js": "^1.1.4",
-    "js-rouge": "^3.0.0",
-    "js-yaml": "^4.1.0",
-    "jsdom": "^26.1.0",
-    "lru-cache": "^11.2.1",
-    "mathjs": "^14.7.0",
-    "node-cache": "^5.1.2",
-    "nunjucks": "^3.2.4",
-    "openai": "^6.0.0",
-    "opener": "^1.5.2",
-    "pem": "^1.15.1",
-    "posthog-node": "^5.8.4",
-    "proxy-agent": "^6.5.0",
-    "proxy-from-env": "^1.1.0",
-    "python-shell": "^5.0.0",
-    "rfdc": "^1.4.1",
-    "rxjs": "^7.8.2",
-    "semver": "^7.7.2",
-    "socket.io": "^4.8.1",
-    "tsx": "^4.20.5",
-    "undici": "^7.16.0",
-    "uuid": "^11.1.0",
-    "winston": "^3.17.0",
-    "ws": "^8.18.3",
-    "zod": "^3.25.76",
-    "zod-validation-error": "^3.5.3"
+  "engines": {
+    "node": ">=20.0.0"
   },
+  "overrides": {
+    "uri-js": "npm:uri-js-replace",
+    "chokidar": "4.0.3",
+    "whatwg-url": "14.2.0",
+    "esbuild": "0.25.9",
+    "react-is": "^18.3.1",
+    "*": {
+      "whatwg-url": "14.2.0",
+      "chokidar": "4.0.3",
+      "esbuild": "0.25.9"
+    }
+  },
+  "typings": "dist/src/index.d.ts",
   "madge": {
     "detectiveOptions": {
       "ts": {
