--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promptfoo-storybook",
+  "name": "promptfoo",
   "version": "0.118.11",
   "description": "LLM eval & testing toolkit",
   "homepage": "https://github.com/promptfoo/promptfoo#readme",
