--- a/packages/toolkit/tsconfig.json
+++ b/packages/toolkit/tsconfig.json
@@ -29,5 +29,5 @@
     "rootDir": "src"
   },
   "include": ["src/**/*", "../storybook/src/ThemeProvider.tsx"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.*", "**/*.spec.*"]
 }
