--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "swc": true
   },
   "include": ["src/", "test/", "./package.json", "src/**/*.json", "test/**/*.json"],
-  "exclude": ["node_modules", "dist", "src/workers/**/*", "src/app/**/*", "test/site/"]
+  "exclude": ["node_modules", "dist", "src/workers/**/*", "src/app/**/*", "test/site/", "packages/toolkit/src/**/*.test.*"]
 }
