--- a/package.json
+++ b/package.json
@@ -249,6 +249,7 @@
     "fastest-levenshtein": "^1.0.16",
     "glob": "^11.0.3",
     "http-z": "^7.1.3",
+    "ink": "^5.1.1",
     "jks-js": "^1.1.4",
     "js-rouge": "^3.0.0",
     "js-yaml": "^4.1.0",
@@ -263,6 +264,7 @@
     "posthog-node": "^5.8.4",
     "proxy-agent": "^6.5.0",
     "proxy-from-env": "^1.1.0",
+    "react": "^18.3.1",
     "python-shell": "^5.0.0",
     "rfdc": "^1.4.1",
     "rxjs": "^7.8.2",
