--- a/examples/redteam-websocket/promptfooconfig.yaml
+++ b/examples/redteam-websocket/promptfooconfig.yaml
@@ -5,24 +5,24 @@ prompts:
   - '{{prompt}}'
 
 targets:
-  # - id: 'ws://localhost:3300/ws'
-  #   config:
-  #     messageTemplate: '{"input": "{{prompt}}"}'
+  - id: 'ws://localhost:3300/ws'
+    config:
+      messageTemplate: '{"input": {{prompt | dump}}}'
+      transformResponse: 'data.message'
   - id: 'ws://localhost:3300/ws-stream'
     config:
-      messageTemplate: '{"input": "{{prompt}}"}'
-      streamResponse: |
+      messageTemplate: '{"input": {{prompt | dump}}}'
+      streamResponse: |-
         (event, data) => {
-          const { message, type } = JSON.parse(event.data);
-          if(type === "message"){return [{output: message},true]}
-          if(type === "error"){return [{error: message},true]}
-          return [data, false];
-        }
+                  const { message, type } = JSON.parse(event.data);
+                  if(type === "message"){return [{output: message},true]}
+                  if(type === "error"){return [{error: message},true]}
+                  return [data, false];}
 
 redteam:
   purpose: Assist users with planning affordable trips to Europe
   plugins:
-    - harmful:self-harm
+    # - harmful:self-harm
     - politics
   strategies:
     - jailbreak
