--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.879.0",
     "@aws-sdk/client-sagemaker-runtime": "^3.879.0",
     "@aws-sdk/credential-provider-sso": "^3.879.0",
+    "@azure/ai-projects": "^1.0.0",
     "@azure/identity": "^4.11.2",
     "@azure/openai-assistants": "^1.0.0-beta.6",
     "@fal-ai/client": "^1.6.2",
@@ -214,7 +215,6 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
     "@apidevtools/json-schema-ref-parser": "^12.0.2",
-    "@azure/ai-projects": "^1.0.0-beta.10",
     "@googleapis/sheets": "^9.8.0",
     "@inquirer/checkbox": "^4.2.4",
     "@inquirer/confirm": "^5.1.18",
