feat: Claude Agent SDK provider support (#5509)
Adds Claude Agent provider via TypeScript SDK (https://docs.claude.com/en/api/agent-sdk/typescript) under anthropic:claude-agent-sdk id.

--- a/biome.json
+++ b/biome.json
@@ -257,6 +257,15 @@
       }
     },
     {
+      "includes": ["examples/claude-agent-sdk/advanced/workspace/**/*"],
+      "linter": {
+        "enabled": false
+      },
+      "formatter": {
+        "enabled": false
+      }
+    },
+    {
       "includes": ["examples/**/*", "site/**/*"],
       "linter": {
         "rules": {
