--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@adaline/together-ai": "1.5.1",
     "@adaline/types": "1.9.1",
     "@adaline/vertex": "1.7.1",
+    "@anthropic-ai/claude-agent-sdk": "^0.1.11",
     "@aws-sdk/client-bedrock-agent-runtime": "^3.908.0",
     "@aws-sdk/client-bedrock-runtime": "^3.908.0",
     "@aws-sdk/client-sagemaker-runtime": "^3.908.0",
