--- a/examples/azure-foundry-agent/promptfooconfig.yaml
+++ b/examples/azure-foundry-agent/promptfooconfig.yaml
@@ -1,7 +1,7 @@
-description: 'Azure AI Foundry Assistant evaluation'
+description: 'Azure AI Foundry Agent evaluation'
 
 providers:
-  - id: azure:foundry-assistant:asst_...
+  - id: azure:foundry-agent:asst_...
     config:
       projectUrl: 'project.services.ai.azure.com/api/projects/project-id'
       temperature: 0.7
