fix: enable multiple concurrent dev instances with automatic port detection
When running npm run dev multiple times, the second instance would fail
because the API server would detect port 15500 in use and exit immediately.
While Vite would auto-increment to port 3001, it would still try to connect
to the first instance's API server on port 15500.

Changes:
- Add listenOnAvailablePort() function to server.ts that tries sequential
  ports (15500, 15501, etc.) until finding an available one
- Remove early exit check in server/index.ts that prevented multiple instances
- Update Vite config to respect VITE_PORT environment variable
- Server now logs "Port X was in use, using port Y instead" when auto-incrementing

This enables running multiple isolated dev instances simultaneously:
- Instance 1: API 15500, Frontend 3000
- Instance 2: API 15501, Frontend 3001
- Instance 3: API 15502, Frontend 3002

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "db:studio": "npx drizzle-kit studio",
     "dev:app": "npm run dev --prefix src/app",
     "dev:server": "nodemon -P 1000 src/server/index.ts",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:app\"",
+    "dev": "concurrently -n server,app \"npm run dev:server\" \"npm run dev:app\"",
     "f": "git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E '\\.(js|jsx|mjs|cjs|ts|tsx|json)$' | xargs npx @biomejs/biome format --write && git diff --name-only --diff-filter=ACMRTUXB origin/main | grep -E '\\.(css|scss|html|md|mdc|mdx|yaml|yml)$' | xargs prettier --write",
     "format:check": "npx @biomejs/biome format && prettier --check '**/*.{css,scss,html,md,mdc,mdx,yaml,yml}'",
     "format": "npx @biomejs/biome format --write . && prettier --write '**/*.{css,scss,html,md,mdc,mdx,yaml,yml}'",
