updating module type for toolkit

--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A React component library for promptfoo",
   "private": true,
+  "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
