--- a/package.json
+++ b/package.json
@@ -217,6 +217,7 @@
     "@slack/web-api": "^7.11.0",
     "@swc/core-darwin-arm64": "^1.13.20",
     "@swc/core-darwin-x64": "^1.13.20",
+    "@swc/core-linux-arm64-musl": "^1.13.20",
     "@swc/core-linux-x64-gnu": "^1.13.20",
     "@swc/core-linux-x64-musl": "^1.13.20",
     "@swc/core-win32-x64-msvc": "^1.13.20"
