--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
       "esbuild": "0.25.9"
     }
   },
-  "peerDependencies": {},
   "devDependencies": {
     "@adaline/anthropic": "1.8.0",
     "@adaline/azure": "1.6.2",
@@ -223,6 +222,7 @@
     "@inquirer/input": "^4.2.5",
     "@inquirer/select": "^4.4.0",
     "@modelcontextprotocol/sdk": "^1.20.0",
+    "@tanstack/react-query": "^5.90.5",
     "@types/ws": "^8.18.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
