--- a/package.json
+++ b/package.json
@@ -83,7 +83,12 @@
       "whatwg-url": "14.2.0",
       "chokidar": "4.0.3",
       "esbuild": "0.25.9"
-    }
+    },
+    "gcp-metadata": "5.3.0",
+    "gaxios": "5.1.3",
+    "https-proxy-agent": "5.0.1",
+    "node-fetch": "2.7.0",
+    "agent-base": "6.0.2"
   },
   "peerDependencies": {},
   "devDependencies": {
