--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
     "node-fetch": "2.7.0",
     "agent-base": "6.0.2"
   },
-  "peerDependencies": {},
   "devDependencies": {
     "@adaline/anthropic": "1.8.0",
     "@adaline/azure": "1.6.2",
@@ -228,6 +227,7 @@
     "@inquirer/input": "^4.2.5",
     "@inquirer/select": "^4.4.0",
     "@modelcontextprotocol/sdk": "^1.20.0",
+    "@openai/agents": "^0.1.11",
     "@types/ws": "^8.18.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
