--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
     "src/workers/**/*",
     "src/app/**/*",
     "test/app/**/*",
-    "test/site/"
+    "test/site/",
+    "test/providers/openai.agents.test.ts",
+    "test/providers/openai.agents-loader.test.ts",
+    "test/providers/openai.agents-tracing.test.ts"
   ]
 }
